--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -31,6 +31,6 @@ jobs:
       
       - name: Install packages
         run: |
-          install.packages('remotes')
-          remotes::install_bioc('TxDb.Hsapiens.UCSC.hg19.knownGene')
+          install.packages(c('remotes', 'BiocManager'))
+          print(remotes:::package_deps('TxDb.Hsapiens.UCSC.hg19.knownGene', repos = c(getOption('repos'), BiocManager::repositories()), type = "both"))
         shell: Rscript {0}
