--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -32,8 +32,12 @@ jobs:
       - name: Install packages
         run: |
           install.packages(c('remotes', 'BiocManager'))
+          print("---")
           (object = remotes:::package_deps('TxDb.Hsapiens.UCSC.hg19.knownGene', repos = c(getOption('repos'), BiocManager::repositories()), type = "both"))
+          print("----")
           (object <- remotes:::upgradable_packages(object, upgrade = "default", quiet = FALSE))
-          (unavailable_on_cran <- object$diff == UNAVAILABLE & object$is_cran)
-          (unknown_remotes <- (object$diff == UNAVAILABLE | object$diff == UNINSTALLED) & !object$is_cran)
+          print("-----")
+          (unavailable_on_cran <- object$diff == remotes:::UNAVAILABLE & object$is_cran)
+          print("------")
+          (unknown_remotes <- (object$diff == remotes:::UNAVAILABLE | object$diff == remotes:::UNINSTALLED) & !object$is_cran)
         shell: Rscript {0}
