--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -48,5 +48,9 @@ jobs:
           (any(object$is_cran & !unavailable_on_cran & behind))
           print("----- -----")
           (r <- object$remote[object$is_cran & behind][[1]])
+          print("----- ----- -")
           (object$package[object$is_cran & behind])
+          print("----- ----- --")
+          install_packages(object$package[object$is_cran & behind], repos = r$repos,
+                 type = r$pkg_type, dependencies = TRUE, quiet = FALSE)
         shell: Rscript {0}
