--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -16,7 +16,6 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: windows-latest, r: '4.0'}
           - {os: macOS-latest, r: '4.0'}
 
     env:
@@ -51,5 +50,5 @@ jobs:
           print("----- ----- -")
           (object$package[object$is_cran & behind])
           print("----- ----- --")
-          install.packages(c("TxDb.Hsapiens.UCSC.hg19.knownGene","BiocGenerics","S4Vectors","IRanges","GenomeInfoDb","GenomicRanges"), repos = c(getOption('repos'), BiocManager::repositories()), type = "both", dependencies = TRUE)
+          install.packages(c("TxDb.Hsapiens.UCSC.hg19.knownGene","GenomeInfoDb"), repos = c(getOption('repos'), BiocManager::repositories()), type = "both", dependencies = TRUE)
         shell: Rscript {0}
