--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -31,24 +31,5 @@ jobs:
       - name: Install packages
         run: |
           install.packages(c('remotes', 'BiocManager'))
-          print("---")
-          (object = remotes:::package_deps('TxDb.Hsapiens.UCSC.hg19.knownGene', repos = c(getOption('repos'), BiocManager::repositories()), type = "both"))
-          print("----")
-          (object <- remotes:::upgradable_packages(object, upgrade = "default", quiet = FALSE))
-          print("-----")
-          (unavailable_on_cran <- object$diff == remotes:::UNAVAILABLE & object$is_cran)
-          print("----- -")
-          (unknown_remotes <- (object$diff == remotes:::UNAVAILABLE | object$diff == remotes:::UNINSTALLED) & !object$is_cran)
-          print("----- --")
-          (ahead_of_cran <- object$diff == remotes:::AHEAD & object$is_cran)
-          print("----- ---")
-          (behind <- is.na(object$installed) | object$diff < remotes:::CURRENT)
-          print("----- ----")
-          (any(object$is_cran & !unavailable_on_cran & behind))
-          print("----- -----")
-          (r <- object$remote[object$is_cran & behind][[1]])
-          print("----- ----- -")
-          (object$package[object$is_cran & behind])
-          print("----- ----- --")
-          install.packages(c("TxDb.Hsapiens.UCSC.hg19.knownGene","IRanges"), repos = c(getOption('repos'), BiocManager::repositories()), type = "both", dependencies = TRUE)
+          install.packages(c("TxDb.Hsapiens.UCSC.hg19.knownGene","IRanges","GenomeInfoDb"), repos = c(getOption('repos'), BiocManager::repositories()), type = "both", dependencies = TRUE)
         shell: Rscript {0}
