--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -30,10 +30,24 @@ jobs:
       
       - name: Install packages
         run: |
-          install.packages(c('remotes', 'BiocManager'))
-          pkgs.use <- c("dplyr", "ggplot2", "tidyr", "limma", "edgeR",
+          paths <- .libPaths()
+          print(paths)
+          (mirror <- getOption("repos"))
+          pkgs <- c("dplyr", "ggplot2", "tidyr", "limma", "edgeR",
                "S4Vectors", "DRIMSeq", "SingleCellExperiment", "tximeta", "msigdbr")
-          BiocManager::install(pkgs.use,
+          isBiocM <- "BiocManager" %in% installed.packages()[, 1]
+          if (!isBiocM) {
+            install.packages("BiocManager", repos = "http://cran.rstudio.com/",
+                             lib = .libPaths()[1])
+          }
+          isInstalled <- pkgs %in% installed.packages(lib.loc = .libPaths()[1])[, 1]
+          BiocManager::install(pkgs[!isInstalled],
                                update = FALSE, dependencies = TRUE,
-                               Ncpus = 2L)
+                               lib = .libPaths()[1], Ncpus = 2L)
+          pkg.load <- lapply(pkgs, FUN = function(x) {
+            x[!(x %in% installed.packages(.libPaths()[1])[, "Package"])]
+          })
+          suppressPackageStartupMessages(
+            lapply(pkgs, library, character.only = TRUE)
+          )
         shell: Rscript {0}
