--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -44,10 +44,7 @@ jobs:
           library(RCurl)
           install.packages("BiocManager")
           BiocManager::install(version = "${{ matrix.config.bioc }}", ask = FALSE)
-          BiocManager::install(c("BiocCheck", "UniProt.ws"))
-          library(UniProt.ws)
-          up <- UniProt.ws(taxId = 9606)
-          select(up, keys=c("P31946","P62258"), columns=c("PDB","SEQUENCE"), keytype="UNIPROTKB")
+          BiocManager::install(c("BiocCheck"))
         shell: Rscript {0}
 
       - name: Session info
