--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -40,7 +40,10 @@ jobs:
           
       - name: Install system dependencies (mac)
         if: runner.os == 'macOS'
-        run: brew install libressl
+        run: |
+          brew install --with-libressl curl
+          sudo cp /usr/bin/curl-config /usr/bin/curl-config.bak
+          sudo cp /usr/local/opt/curl/bin/curl-config /usr/bin/curl-config
         
       - name: Check curl version
         if: runner.os != 'Windows'
