--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -42,6 +42,8 @@ jobs:
         if: runner.os == 'macOS'
         run: |
           brew install curl-openssl
+          sudo cp /usr/bin/curl-config /usr/bin/curl-config.bak
+          sudo cp /usr/local/opt/curl/bin/curl-config /usr/bin/curl-config
         
       - name: Check curl version
         if: runner.os != 'Windows'
