Try with libressl

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -41,10 +41,12 @@ jobs:
       - name: Install system dependencies (mac)
         if: runner.os == 'macOS'
         run: |
-          brew install curl-openssl
-          sudo cp /usr/bin/curl-config /usr/bin/curl-config.bak
-          sudo cp /usr/local/opt/curl/bin/curl-config /usr/bin/curl-config
-        
+          brew install libressl
+          echo 'export PATH="/usr/local/opt/libressl/bin:$PATH"' >> /Users/runner/.bash_profile
+          export LDFLAGS="-L/usr/local/opt/libressl/lib"
+          export CPPFLAGS="-I/usr/local/opt/libressl/include"
+          export PKG_CONFIG_PATH="/usr/local/opt/libressl/lib/pkgconfig"
+
       - name: Check curl version
         if: runner.os != 'Windows'
         run: curl --version
