check curl path

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -51,6 +51,7 @@ jobs:
         if: runner.os != 'Windows'
         run: |
           echo $PATH
+          which curl
           curl --version
       
       - name: Install and load packages
