--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -17,12 +17,13 @@ jobs:
       matrix:
         config:
         - { os: windows-latest, r: 'devel', bioc: 'devel'}
-        - { os: macOS-latest, r: 'devel', bioc: 'devel'}
-        - { os: macOS-latest, r: 'release', bioc: '3.12'}
+        - { os: macOS-latest, r: 'devel', bioc: 'devel', curlConfigPath: '/usr/bin/'}
+        - { os: macOS-latest, r: 'release', bioc: '3.12', curlConfigPath: '/usr/bin/'}
         - { os: ubuntu-16.04, r: 'devel', bioc: 'devel', cran: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
+      CURL_CONFIG: ${{ matrix.config.curlConfigPath }}curl-config
 
     steps:
       - uses: actions/checkout@v2
@@ -46,10 +47,8 @@ jobs:
           curl --version
       
       - name: Install and load packages
-        env: 
-          CURL_CONFIG: /usr/bin/curl-config
         run: |
-          install.packages("RCurl", type = "source")
+          install.packages("RCurl")
           library(RCurl)
           install.packages("BiocManager")
           BiocManager::install(version = "${{ matrix.config.bioc }}", ask = FALSE)
