--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -1,8 +1,8 @@
 on:
-  push:
-  pull_request:
-    branches:
-      - master
+  # push:
+  # pull_request:
+  #   branches:
+  #     - master
 
 name: R-install
 
