--- a/.github/workflows/conda-r-install.yaml
+++ b/.github/workflows/conda-r-install.yaml
@@ -17,14 +17,10 @@ jobs:
           update-conda: true
           conda-channels: 'bioconda,conda-forge,defaults'
 
-      - name: create conda environment
+      - name: install snakemake and run workflow
         run: |
-          conda env create --file environment_R.yaml --name envr
-          
-      - name: install package
-        run: |
-          conda activate envr
-          Rscript -e "install.packages('units')"
-          conda deactivate
-
-
+          conda install snakemake=5.16.0
+          mkdir -p $HOME/.R
+          echo -e 'MAKEFLAGS = -j8' > $HOME/.R/Makevars
+          echo 'options(Ncpus = 8)' > $HOME/.Rprofile
+          snakemake --use-conda --cores 2
