--- a/.github/workflows/conda-r-install.yaml
+++ b/.github/workflows/conda-r-install.yaml
@@ -13,9 +13,14 @@ jobs:
       - name: Install system dependencies (Linux)
         if: runner.os == 'Linux'
         run: |
-          sudo apt-get update && \
-          sudo apt-get -y install libudunits2-dev libcairo2-dev
-        
+          sudo apt-get -y update && \
+          sudo apt-get -y install libudunits2-dev libcairo2-dev \
+          libgdal-dev libgeos-dev libproj-dev
+
+      - uses: r-lib/actions/setup-r@master
+        with:
+          r-version: 4.0
+          
       - name: setup conda
         uses: s-weigand/setup-conda@v1.0.5
         with:
@@ -29,7 +34,7 @@ jobs:
           mkdir -p $HOME/.R
           echo -e 'MAKEFLAGS = -j8' > $HOME/.R/Makevars
           echo 'options(Ncpus = 8)' > $HOME/.Rprofile
-          snakemake --use-conda --cores 2
+          snakemake --cores 2
 
       - name: upload artifact
         uses: actions/upload-artifact@v1
